--- a/index.html
+++ b/index.html
@@ -4,25 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OriginSix</title>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>beautysalon.</h1>
+  <header id="header">
+
+    <nav class="container">
+      <a class="logo" href="#">beautysalon.</a>
+      <div class="menu">...</div>
+    </nav>
+    
   </header>
 
 
   <main>
     <section>
-      <img 
-        src="https://plus.unsplash.com/premium_photo-1661766932281-378bf3cc18a2?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Z2lmdCUyMHNob3B8ZW58MHx8MHx8fDA%3D" 
-        alt="Moças sorrindo em uma loja"
-      />
-
-      <h1>Saúde natural para os seus cabelos</h1>
-
-      <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
-
-      <a href="#">Agendar um horário</a>
+      <div class="container">
+        <img 
+          src="https://plus.unsplash.com/premium_photo-1661766932281-378bf3cc18a2?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Z2lmdCUyMHNob3B8ZW58MHx8MHx8fDA%3D" 
+          alt="Moças sorrindo em uma loja"
+        />
+  
+        <h1>Saúde natural para os seus cabelos</h1>
+  
+        <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
+  
+        <a href="#">Agendar um horário</a>
+      </div>
     </section>
   </main>
   
