--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header id="header">
 
     <nav class="container">
-      <a class="logo" href="#">beautysalon.</a>
+      <a class="logo" href="#">beauty<span>salon</span>.</a>
       <div class="menu">...</div>
     </nav>
     
@@ -35,7 +35,7 @@
   
         <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
   
-        <a href="#">Agendar um horário</a>
+        <a class="button" href="#">Agendar um horário</a>
       </div>
     </section>
   </main>
