--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
       </div>
     </section>
 
+    <div class="divider-1"></div>
+
     <section class="section">
       <div class="container">
         outra section
