--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
 
     <nav class="container">
       <a class="logo" href="#">beauty<span>salon</span>.</a>
-      <div class="menu">...</div>
+      <div class="menu">
+        <ul>
+          <li><a href="#home">Início</a></li>
+          <li><a href="#about">Sobre</a></li>
+          <li><a href="#services">Serviços</a></li>
+          <li><a href="#testimonials">Depoimento</a></li>
+          <li><a href="#contact">Contrato</a></li>
+        </ul>
+      </div>
     </nav>
     
   </header>
