--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
 
     <div class="divider-1"></div>
 
-    <section class="section">
-      <div class="container">
-        outra section
+    <section class="section" id="about">
+      <div class="container grid">
+        Sobre
+      </div>
+    </section>
+
+    <section class="section" id="services">
+      <div class="container grid">
+        Serviços
       </div>
     </section>
   </main>
