--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </head>
 <body>
   <header id="header">
-
-    <nav class="container">
+    <nav class="container show">
       <a class="logo" href="#">beauty<span>salon</span>.</a>
       <div class="menu">
         <ul>
@@ -23,11 +22,13 @@
           <li><a href="#about">Sobre</a></li>
           <li><a href="#services">Serviços</a></li>
           <li><a href="#testimonials">Depoimento</a></li>
-          <li><a href="#contact">Contrato</a></li>
+          <li><a href="#contact">Contato</a></li>
         </ul>
       </div>
+
+      <div class="open">...</div>
+      <div class="close">x</div>
     </nav>
-    
   </header>
 
 
