--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OriginSix</title>
 
+  <link rel="stylesheet" href="assets/fonts/style.css">
+
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header id="header">
-    <nav class="container show">
+    <nav class="container">
       <a class="logo" href="#">beauty<span>salon</span>.</a>
       <div class="menu">
         <ul class="grid">
@@ -26,8 +28,8 @@
         </ul>
       </div>
 
-      <div class="open">...</div>
-      <div class="close">x</div>
+      <div class="icon-menu"></div>
+      <div class="icon-close"></div>
     </nav>
   </header>
 
