style menu icons

--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OriginSix</title>
 
-  <link rel="stylesheet" href="assets/fonts/style.css">
+  <link rel="stylesheet" href="assets/fonts/style.css"/>
 
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css"/>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link 
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=Poppins:wght@400;700&display=swap" 
+    rel="stylesheet"
+  />
 </head>
 <body>
   <header id="header">
     <nav class="container">
-      <a class="logo" href="#">beauty<span>salon</span>.</a>
+      <a class="logo" href="#">riva<span>kits</span>.</a>
       <div class="menu">
         <ul class="grid">
           <li><a class="title" href="#home">Início</a></li>
@@ -28,8 +30,8 @@
         </ul>
       </div>
 
-      <div class="icon-menu"></div>
-      <div class="icon-close"></div>
+      <div class="toggle icon-menu"></div>
+      <div class="toggle icon-close"></div>
     </nav>
   </header>
 
@@ -46,9 +48,9 @@
         </div>
         
         <div class="text">
-          <h2 class="title">Saúde natural para os seus cabelos</h2>
+          <h2 class="title">Melhores opções para seus presentes</h2>
   
-          <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
+          <p>Uma loja exclusiva em Caicó, especializado em kits presenteáveis.</p>
   
           <a class="button" href="#">Agendar um horário</a>
         </div>
