--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="image">
           <img 
-            src="https://plus.unsplash.com/premium_photo-1661766932281-378bf3cc18a2?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Z2lmdCUyMHNob3B8ZW58MHx8MHx8fDA%3D" 
+            src="https://images.unsplash.com/photo-1451443700141-5ddb6d85a8fc?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
             alt="Moças sorrindo em uma loja"
           />
         </div>
@@ -62,7 +62,20 @@
 
     <section class="section" id="about">
       <div class="container grid">
-        Sobre
+        <div class="image">
+          <img 
+            src="https://media.istockphoto.com/id/1304225026/pt/foto/top-view-of-mobile-phone-glasses-pen-and-notebook-written-with-about-us-on-wooden-background.jpg?s=612x612&w=0&k=20&c=6z5__ST0If8OAI3APGXMnEfbaULyidN1c8QzM-7woR0=" 
+            alt="Senhora sorrindo com os braços sobre um balcão"
+          />
+        </div>
+        <div class="text">
+          <h2 class="title">Sobre nós</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores corrupti dolor consequatur voluptatibus, tenetur pariatur, illo excepturi provident commodi repellat ullam minima. Quibusdam corporis doloribus cumque labore animi ducimus veniam?</p>
+          <br />
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis debitis corporis eius. Earum debitis iusto fugiat hic tempora, aperiam numquam quis vel quo amet velit quod. Pariatur minima nobis earum.</p>
+          <br />
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti numquam maxime atque quis ad repudiandae molestias amet consequatur doloribus culpa, earum impedit officiis odit tempora, harum totam quibusdam similique iure.</p>
+        </div>
       </div>
     </section>
 
