--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
       </div>
     </section>
 
+    <div class="divider-2"></div>
+
     <section class="section" id="services">
       <div class="container grid">
         Serviços
