add services struct

--- a/index.html
+++ b/index.html
@@ -83,7 +83,24 @@
 
     <section class="section" id="services">
       <div class="container grid">
-        Serviços
+        <header></header>
+        <div class="cards">
+          <div class="card">
+            <div class="icon-"></div>
+            <h3 class="title"></h3>
+            <p></p>
+          </div>
+          <div class="card">
+            <div class="icon-"></div>
+            <h3 class="title"></h3>
+            <p></p>
+          </div>
+          <div class="card">
+            <div class="icon-"></div>
+            <h3 class="title"></h3>
+            <p></p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
