--- a/index.html
+++ b/index.html
@@ -83,22 +83,24 @@
 
     <section class="section" id="services">
       <div class="container grid">
-        <header></header>
+        <header>
+          <h2 class="title">Serviços</h2>
+        </header>
         <div class="cards">
           <div class="card">
             <div class="icon-"></div>
-            <h3 class="title"></h3>
-            <p></p>
+            <h3 class="title">Cama, Mesa & Banho</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae quisquam amet possimus totam porro quidem laboriosam harum, ad corporis expedita placeat? Distinctio nulla aliquam maiores recusandae doloremque corporis culpa nemo?</p>
           </div>
           <div class="card">
             <div class="icon-"></div>
-            <h3 class="title"></h3>
-            <p></p>
+            <h3 class="title">Cosméticos</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quidem distinctio assumenda laudantium est quaerat veritatis sequi placeat nam nobis, quisquam, laboriosam ratione ipsa sint itaque soluta iusto harum ex.</p>
           </div>
           <div class="card">
             <div class="icon-"></div>
-            <h3 class="title"></h3>
-            <p></p>
+            <h3 class="title">Utensílios Domésticos</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima cupiditate ab molestias inventore velit reprehenderit nam numquam mollitia ratione vero exercitationem fuga commodi assumenda, tempore neque. Expedita ullam culpa aperiam!</p>
           </div>
         </div>
       </div>
