--- a/index.html
+++ b/index.html
@@ -85,20 +85,25 @@
       <div class="container grid">
         <header>
           <h2 class="title">Serviços</h2>
+          <p>
+            Com mais de 3 anos de mercado, a <strong>rivakispresenteaveis</strong>
+            já conquistou clientes de inúmeros setores com seus ótimos 
+            produtos e atendimento especializado.
+          </p>
         </header>
         <div class="cards">
           <div class="card">
-            <div class="icon-"></div>
+            <div class="icon-trim"></div>
             <h3 class="title">Cama, Mesa & Banho</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae quisquam amet possimus totam porro quidem laboriosam harum, ad corporis expedita placeat? Distinctio nulla aliquam maiores recusandae doloremque corporis culpa nemo?</p>
           </div>
           <div class="card">
-            <div class="icon-"></div>
+            <div class="icon-cosmetics"></div>
             <h3 class="title">Cosméticos</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quidem distinctio assumenda laudantium est quaerat veritatis sequi placeat nam nobis, quisquam, laboriosam ratione ipsa sint itaque soluta iusto harum ex.</p>
           </div>
           <div class="card">
-            <div class="icon-"></div>
+            <div class="icon-woman-hair"></div>
             <h3 class="title">Utensílios Domésticos</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima cupiditate ab molestias inventore velit reprehenderit nam numquam mollitia ratione vero exercitationem fuga commodi assumenda, tempore neque. Expedita ullam culpa aperiam!</p>
           </div>
