start testimonials struct

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     </nav>
   </header>
 
-
   <main>
     <section class="section" id="home">
       <div class="container grid">
@@ -110,6 +109,58 @@
         </div>
       </div>
     </section>
+
+    <div class="divider-1"></div>
+
+    <section class="section" id="testimonials">
+      <div class="container grid">
+        <header>
+          <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+        </header>
+        <div class="testimonials">
+          <div class="testimonial">
+            <blockquote>
+              <p>
+                <span>&ldquo;</span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
+              </p>
+              <cite>
+                <img src="" alt="">
+                Wanessa Souza
+              </cite>
+            </blockquote>
+          </div>
+
+          <div class="testimonial">
+            <blockquote>
+              <p>
+                <span>&ldquo;</span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
+              </p>
+              <cite>
+                <img src="" alt="">
+                Franciele Venega
+              </cite>
+            </blockquote>
+          </div>
+
+          <div class="testimonial">
+            <blockquote>
+              <p>
+                <span>&ldquo;</span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
+              </p>
+              <cite>
+                <img src="" alt="">
+                Valeska Fabris
+              </cite>
+            </blockquote>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
   </main>
   
   <script src="main.js"></script>
