add photos from assets to testimonials page

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
               </p>
               <cite>
-                <img src="" alt="">
+                <img src="assets/photos/36.jpg" alt="Foto de Wanessa Souza">
                 Wanessa Souza
               </cite>
             </blockquote>
@@ -138,7 +138,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
               </p>
               <cite>
-                <img src="" alt="">
+                <img src="assets/photos/52.jpg" alt="Foto de Franciele Venega">
                 Franciele Venega
               </cite>
             </blockquote>
@@ -151,7 +151,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
               </p>
               <cite>
-                <img src="" alt="">
+                <img src="assets/photos/92.jpg" alt="Foto de Valeska Fabris">
                 Valeska Fabris
               </cite>
             </blockquote>
