--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
   <link rel="stylesheet" href="assets/fonts/style.css"/>
 
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+  />
+
   <link rel="stylesheet" href="style.css"/>
 
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -14,6 +19,11 @@
   <link 
     href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=Poppins:wght@400;700&display=swap" 
     rel="stylesheet"
+  />
+
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
   />
 </head>
 <body>
@@ -113,56 +123,64 @@
     <div class="divider-1"></div>
 
     <section class="section" id="testimonials">
-      <div class="container grid">
+      <div class="container">
         <header>
           <h2 class="title">Depoimentos de quem já passou por aqui</h2>
         </header>
-        <div class="testimonials">
-          <div class="testimonial">
-            <blockquote>
-              <p>
-                <span>&ldquo;</span>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
-              </p>
-              <cite>
-                <img src="assets/photos/36.jpg" alt="Foto de Wanessa Souza">
-                Wanessa Souza
-              </cite>
-            </blockquote>
+
+        <div class="testimonials swiper">
+          <div class="swiper-wrapper">
+
+            <div class="testimonial swiper-slide">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
+                </p>
+                <cite>
+                  <img src="assets/photos/36.jpg" alt="Foto de Wanessa Souza">
+                  Wanessa Souza
+                </cite>
+              </blockquote>
+            </div>
+  
+            <div class="testimonial swiper-slide">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
+                </p>
+                <cite>
+                  <img src="assets/photos/52.jpg" alt="Foto de Franciele Venega">
+                  Franciele Venega
+                </cite>
+              </blockquote>
+            </div>
+  
+            <div class="testimonial swiper-slide">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
+                </p>
+                <cite>
+                  <img src="assets/photos/92.jpg" alt="Foto de Valeska Fabris">
+                  Valeska Fabris
+                </cite>
+              </blockquote>
+            </div>
+
           </div>
 
-          <div class="testimonial">
-            <blockquote>
-              <p>
-                <span>&ldquo;</span>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
-              </p>
-              <cite>
-                <img src="assets/photos/52.jpg" alt="Foto de Franciele Venega">
-                Franciele Venega
-              </cite>
-            </blockquote>
-          </div>
-
-          <div class="testimonial">
-            <blockquote>
-              <p>
-                <span>&ldquo;</span>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium in rerum enim! Officia eligendi libero illo temporibus. Fugiat assumenda eius, nihil doloremque quaerat ipsam fugit similique excepturi eligendi explicabo.
-              </p>
-              <cite>
-                <img src="assets/photos/92.jpg" alt="Foto de Valeska Fabris">
-                Valeska Fabris
-              </cite>
-            </blockquote>
-          </div>
-
+          <div class="swiper-pagination"></div>
         </div>
       </div>
     </section>
 
   </main>
   
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
   <script src="main.js"></script>
 </body>
 </html>
