add contact page struct

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   </header>
 
   <main>
+    <!-- HOME -->
     <section class="section" id="home">
       <div class="container grid">
 
@@ -69,6 +70,7 @@
 
     <div class="divider-1"></div>
 
+    <!-- ABOUT -->
     <section class="section" id="about">
       <div class="container grid">
         <div class="image">
@@ -90,6 +92,7 @@
 
     <div class="divider-2"></div>
 
+    <!-- SERVICES -->
     <section class="section" id="services">
       <div class="container grid">
         <header>
@@ -122,6 +125,7 @@
 
     <div class="divider-1"></div>
 
+    <!-- TESTIMONIALS -->
     <section class="section" id="testimonials">
       <div class="container">
         <header>
@@ -176,6 +180,30 @@
         </div>
       </div>
     </section>
+
+    <!-- CONTACT -->
+    <div class="section section" id="contact">
+      <div class="container grid">
+
+        <div class="text">
+          <h2 class="title">Entre em contato com a gente!</h2>
+          <p>
+            Entre em contato com a Beautysalon, queremos tirar 
+            suas dúvidas, ouvir suas críticas e sugestões.
+          </p>
+          <a href=""><i class="icon-whatsapp"></i> Entrar em contato</a>
+        </div>
+
+        <div class="links">
+          <ul>
+            <li> <i class="icon-phone"></i> 11 99845-6754 </li>
+            <li> <i class="icon-map-in"></i> R. Amauri Souza, 346 </li>
+            <li> <i class="icon-mail"></i> contato@rivakits.com </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
 
   </main>
   
