add divider and map icon

--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@
       </div>
     </section>
 
+    <div class="divider-2"></div>
+
     <!-- CONTACT -->
     <div class="section section" id="contact">
       <div class="container grid">
@@ -197,7 +199,7 @@
         <div class="links">
           <ul>
             <li> <i class="icon-phone"></i> 11 99845-6754 </li>
-            <li> <i class="icon-map-in"></i> R. Amauri Souza, 346 </li>
+            <li> <i class="icon-map-pin"></i> R. Amauri Souza, 346 </li>
             <li> <i class="icon-mail"></i> contato@rivakits.com </li>
           </ul>
         </div>
