--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
             Entre em contato com a Beautysalon, queremos tirar 
             suas dúvidas, ouvir suas críticas e sugestões.
           </p>
-          <a href=""><i class="icon-whatsapp"></i> Entrar em contato</a>
+          <a href="#" class="button"><i class="icon-whatsapp"></i> Entrar em contato</a>
         </div>
 
         <div class="links">
-          <ul>
+          <ul class="grid">
             <li> <i class="icon-phone"></i> 11 99845-6754 </li>
             <li> <i class="icon-map-pin"></i> R. Amauri Souza, 346 </li>
             <li> <i class="icon-mail"></i> contato@rivakits.com </li>
