add whatsapp link

--- a/index.html
+++ b/index.html
@@ -193,7 +193,11 @@
             Entre em contato com a Beautysalon, queremos tirar 
             suas dúvidas, ouvir suas críticas e sugestões.
           </p>
-          <a href="#" class="button"><i class="icon-whatsapp"></i> Entrar em contato</a>
+          <a 
+            href="https://api.whatsapp.com/send?phone=+5583998056879&text=Oi! Gostaria de encomendar um kit presenteável" 
+            class="button"
+            target="_blank"
+            ><i class="icon-whatsapp"></i> Entrar em contato</a>
         </div>
 
         <div class="links">
