--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
   </main>
   
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
+  
+  <script src="https://unpkg.com/scrollreveal"></script>
+  
   <script src="main.js"></script>
 </body>
 </html>
