--- a/index.html
+++ b/index.html
@@ -211,6 +211,23 @@
       </div>
     </div>
 
+    <div class="divider-1"></div>
+
+    <footer>
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo" href="#home">riva<span>kits</span>.</a>
+          <p>©2021 Rivakits.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+
+        <div class="social">
+          <a href=""><i class="icon-"></i></a>
+          <a href=""><i class="icon-"></i></a>
+          <a href=""><i class="icon-"></i></a>
+        </div>
+      </div>
+    </footer>
   </main>
   
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
