--- a/index.html
+++ b/index.html
@@ -213,18 +213,26 @@
 
     <div class="divider-1"></div>
 
-    <footer>
+    <footer class="section">
       <div class="container grid">
         <div class="brand">
-          <a class="logo" href="#home">riva<span>kits</span>.</a>
+          <a class="logo logo-alt" href="#home">riva<span>kits</span>.</a>
           <p>©2021 Rivakits.</p>
           <p>Todos os direitos reservados.</p>
         </div>
 
         <div class="social">
-          <a href=""><i class="icon-"></i></a>
-          <a href=""><i class="icon-"></i></a>
-          <a href=""><i class="icon-"></i></a>
+          <a href="https://instagram.com" target="_blank">
+            <i class="icon-instagram"></i>
+          </a>
+
+          <a href="https://facebook.com" target="_blank">
+            <i class="icon-facebook"></i>
+          </a>
+
+          <a href="https://youtube.com" target="_blank">
+            <i class="icon-youtube"></i>
+          </a>
         </div>
       </div>
     </footer>
