--- a/index.html
+++ b/index.html
@@ -213,30 +213,33 @@
 
     <div class="divider-1"></div>
 
-    <footer class="section">
-      <div class="container grid">
-        <div class="brand">
-          <a class="logo logo-alt" href="#home">riva<span>kits</span>.</a>
-          <p>©2021 Rivakits.</p>
-          <p>Todos os direitos reservados.</p>
-        </div>
-
-        <div class="social">
-          <a href="https://instagram.com" target="_blank">
-            <i class="icon-instagram"></i>
-          </a>
-
-          <a href="https://facebook.com" target="_blank">
-            <i class="icon-facebook"></i>
-          </a>
-
-          <a href="https://youtube.com" target="_blank">
-            <i class="icon-youtube"></i>
-          </a>
-        </div>
-      </div>
-    </footer>
   </main>
+
+  <footer class="section">
+    <div class="container grid">
+      <div class="brand">
+        <a class="logo logo-alt" href="#home">riva<span>kits</span>.</a>
+        <p>©2021 Rivakits.</p>
+        <p>Todos os direitos reservados.</p>
+      </div>
+
+      <div class="social">
+        <a href="https://instagram.com" target="_blank">
+          <i class="icon-instagram"></i>
+        </a>
+
+        <a href="https://facebook.com" target="_blank">
+          <i class="icon-facebook"></i>
+        </a>
+
+        <a href="https://youtube.com" target="_blank">
+          <i class="icon-youtube"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
+
+  <a href="#home" class="back-to-top"> <i class="icon-arrow-up"></i> </a>
   
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   
