update services icons

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <div class="text">
           <h2 class="title">Melhores opções para seus presentes</h2>
   
-          <p>Uma loja exclusiva em Caicó, especializado em kits presenteáveis.</p>
+          <p>Uma loja exclusiva em Caicó, especializada em kits presenteáveis.</p>
   
-          <a class="button" href="#">Agendar um horário</a>
+          <a class="button" href="#">Choice a gift</a>
         </div>
         
       </div>
@@ -105,7 +105,7 @@
         </header>
         <div class="cards grid">
           <div class="card">
-            <i class="icon-trim"></i>
+            <i class="icon-home"></i>
             <h3 class="title">Cama, Mesa & Banho</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae quisquam amet possimus totam porro quidem laboriosam harum, ad corporis expedita placeat? Distinctio nulla aliquam maiores recusandae doloremque corporis culpa nemo?</p>
           </div>
@@ -115,7 +115,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quidem distinctio assumenda laudantium est quaerat veritatis sequi placeat nam nobis, quisquam, laboriosam ratione ipsa sint itaque soluta iusto harum ex.</p>
           </div>
           <div class="card">
-            <i class="icon-woman-hair"></i>
+            <i class="icon-shopping-bag"></i>
             <h3 class="title">Utensílios Domésticos</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima cupiditate ab molestias inventore velit reprehenderit nam numquam mollitia ratione vero exercitationem fuga commodi assumenda, tempore neque. Expedita ullam culpa aperiam!</p>
           </div>
@@ -190,7 +190,7 @@
         <div class="text">
           <h2 class="title">Entre em contato com a gente!</h2>
           <p>
-            Entre em contato com a Beautysalon, queremos tirar 
+            Entre em contato com a RivaKits, queremos tirar 
             suas dúvidas, ouvir suas críticas e sugestões.
           </p>
           <a 
