start media queria large device

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="container grid">
         <header>
           <h2 class="title">Serviços</h2>
-          <p>
+          <p class="subtitle">
             Com mais de 3 anos de mercado, a <strong>rivakispresenteaveis</strong>
             já conquistou clientes de inúmeros setores com seus ótimos 
             produtos e atendimento especializado.
