fix error on contact section

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div class="divider-2"></div>
 
     <!-- CONTACT -->
-    <div class="section section" id="contact">
+    <section class="section" id="contact">
       <div class="container grid">
 
         <div class="text">
@@ -209,7 +209,7 @@
         </div>
 
       </div>
-    </div>
+    </section>
 
     <div class="divider-1"></div>
 
